# zkMarket

./: README.md  package-lock.json  package.json
app/: page.tsx
app/create/: page.tsx
components/: create-listing-form.tsx  listing-card.tsx
contracts/: README.md  hardhat.config.ts  package-lock.json
contracts/contracts/: NFTMarketplace.sol
contracts/contracts/mocks/: MockERC20.sol  MockERC721.sol  MockZKVerify.sol
contracts/deploy/: marketplace.ts
contracts/test/: NFTMarketplace.ts
frontend/: README.md  env.example  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/api/create-listing/: route.ts
frontend/app/api/test-zkverify/: route.ts
frontend/app/orders/: page.tsx
frontend/components/: create-listing-form.tsx  navbar.tsx  orders-list.tsx
frontend/utils/: prover.ts
zk-service/: README.md
zk-service/host/: Cargo.toml
zk-service/host/src/: main.rs  models.rs
zk-service/methods/guest/: Cargo.toml
zk-service/methods/guest/src/: main.rs
